Switched from using psycopg2 to psycopg2-binary until we can elegantly incorporate the non-binary version into a docker environment. Updated urllib3 to address vulnerability.

--- a/api/Pipfile
+++ b/api/Pipfile
@@ -7,7 +7,7 @@ name = "pypi"
 django = "*"
 djangorestframework = "*"
 gunicorn = "*"
-psycopg2 = "*"
+psycopg2-binary = "*"
 graphviz = "*"
 djangorestframework-jwt = "*"
 httpie = "*"
